# ludijam18

./: CMakeLists.txt  README.md  TODO.md
code/: config.h.in  main.cc
code/local/: Account.cc  Account.h  BuildMenu.cc  BuildMenu.h  BuildPanel.cc  BuildPanel.h  EconomicModel.cc  EconomicModel.h  GameConstants.h  Globe.cc  Globe.h  InfoPanel.cc  InfoPanel.h  Messages.h  Singletons.cc  Singletons.h  Troubles.cc  Troubles.h  WorldMap.cc  WorldMap.h
data/no-inc/: ASSETS.md
docs/: NOTES.md
